# autoai-optimize

./: .gitignore  LICENSE  README.md  acme_store_schemas.json  benchmark.md  benchmark.py  benchmark_results.json  demo.py  dev-requirements.txt  e2e_test_server.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sample_site/: index.html
sample_site/blog/: why-fast-apis-matter.html
sample_site/shop/product/: widget-pro-3000.html
src/autoai_optimize/: __init__.py  config.py  core.py  offload.py  utils.py
src/autoai_optimize/analyze/: __init__.py  classifier.py  extractors.py  hints.py  jsdetect.py
src/autoai_optimize/frameworks/: __init__.py  base.py  django.py  fastapi.py
src/autoai_optimize/inject/: __init__.py  html.py
src/autoai_optimize/schema/: __init__.py  article.py  base.py  product.py  profile.py  registry.py
static_html_demo/: index.html
static_html_demo/blog/: ai-search-seo.html
static_html_demo/products/: mechanical-keyboard.html
tests/: conftest.py  test_add_to_cart_scope.py  test_cache_key.py  test_classifier.py  test_config_paths.py  test_django_middleware.py  test_extractors.py  test_extractors_edge.py  test_fastapi_edge.py  test_fastapi_middleware.py  test_fragment_inject.py  test_frameworks_base.py  test_idempotency.py  test_inject.py  test_inject_edge.py  test_js_detect.py  test_observability.py  test_offload_parsing.py  test_price_parsing.py  test_schema.py  test_utils_cache.py  test_webhook_retry.py
