[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoai-optimize"
version = "1.0.3"
description = "One-line Python middleware that auto-injects Schema.org / JSON-LD into your web pages for better SEO, voice search, and AI-agent discovery."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Pankaj", email = "" }]
keywords = [
    "seo",
    "json-ld",
    "schema.org",
    "structured-data",
    "fastapi",
    "django",
    "ai",
    "voice-search",
    "middleware",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = ["beautifulsoup4>=4.11,<5"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
django = ["django>=4.2"]
lxml = ["lxml>=4.9"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "fastapi>=0.100",
    "django>=4.2",
    "lxml>=4.9",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/AlfaPankaj/autoai-optimize"
Documentation = "https://github.com/AlfaPankaj/autoai-optimize#readme"
Issues = "https://github.com/AlfaPankaj/autoai-optimize/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autoai_optimize"]

# ---- tooling config ----

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/autoai_optimize"]
